fix spacing on CACAP, minor changes

--- a/style.scss
+++ b/style.scss
@@ -2303,16 +2303,15 @@ span.activity {
  * so we have to override some things 
  */ 
 
-#cacap-body { 
+#cacap-edit { 
 	margin-top: 2em; 
 } 
 .activity.bp-user .main-menu { 
 	font-size: 100%; 
 } 
 .cacap-bp-profile-fields { 
-	/*width: 900px; */
 	/* A temporary hack to hide some profile fields per #159.
-	/* This has to be done in CSS for the moment, since these fields 
+	 * This has to be done in CSS for the moment, since these fields 
 	 * are baked into CACAP, and profiles won't save without them.
 	 */ 
 	display: none;
